Change Composer description

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"description": "The CodeIgniter framework",
+	"description": "Fork of CodeIgniter 3",
 	"name": "nielbuys/framework",
 	"type": "project",
 	"homepage": "https://codeigniter.com",
