--- a/.github/workflows/test-phpunit.yml
+++ b/.github/workflows/test-phpunit.yml
@@ -12,10 +12,28 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ '8.2', '8.1', '8.0', '7.4', '7.3', '7.2']
+        php: [ '8.3', '8.2', '8.1', '8.0', '7.4']
         DB: [ 'pdo/mysql', 'pdo/pgsql', 'pdo/sqlite', 'mysqli', 'pgsql', 'sqlite' ]
         compiler: [ default ]
         include:
+          - php: '8.3'
+            DB: 'pdo/mysql'
+            compiler: jit
+          - php: '8.3'
+            DB: 'pdo/pgsql'
+            compiler: jit
+          - php: '8.3'
+            DB: 'pdo/sqlite'
+            compiler: jit
+          - php: '8.3'
+            DB: 'mysqli'
+            compiler: jit
+          - php: '8.3'
+            DB: 'pgsql'
+            compiler: jit
+          - php: '8.3'
+            DB: 'sqlite'
+            compiler: jit
           - php: '8.2'
             DB: 'pdo/mysql'
             compiler: jit
