--- a/.github/workflows/test-phpunit.yml
+++ b/.github/workflows/test-phpunit.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   tests:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[ci skip]')"
+    if: '!contains(github.event.head_commit.message, "[ci skip]")'
     env:
       PHP_INI_VALUES: assert.exception=1, zend.assertions=1
 
