--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,6 @@
 	},
 	"require-dev": {
 		"mikey179/vfsstream": "1.6.*",
-		"phpunit/phpunit": "^9.6"
+		"phpunit/phpunit": "9.* || 10.* || 11.*"
 	}
 }
